--- a/exemple_site/index.html
+++ b/exemple_site/index.html
@@ -14,6 +14,7 @@
         }
         p{
             text-align: justify;
+            text-indent: 24px;
         }
         a{
             color:green;
